--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,15 +7,55 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.PhoneInputInput {
+  background-color: transparent;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.PhoneInputInput:focus {
+  outline: none;
+}
+
+/* Styles par défaut pour les balises */
+h1 {
+  font-size: 30px;
+  font-weight: bold;
+  color: #163860;
+}
+
+h2 {
+  font-size: 16px;
+  font-weight: bold;
+  color: #163860;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #163860;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #163860;
+}
+
+h5 {
+  font-size: 18px;
+  font-weight: bold;
+  color: #163860;
+}
+
+p {
+  font-size: 16px;
+  color: #163860;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ul li {
+  font-size: 16px;
+  color: #163860;
 }
